2004-11-28  Sylvain Pasche  <sylvain.pasche@camptocamp.com>

		* added HttpUnit tests

2004-09-28  Sylvain Pasche  <sylvain.pasche@camptocamp.com>

		* fixed Query plugin
		* modifed LayersRequest API

2004-10-08  Yves Bolognini <yves.bolognini@camptocamp.com>

        * added projects management
        * WSDL dynamic generation depending on installed plugins

2004-10-01  Yves Bolognini <yves.bolognini@camptocamp.com>

        * added unit tests framework (PHPUnit2)
        * new unserialization
        * added doc generator (PhpDocumentor)

2004-09-28  Sylvain Pasche  <sylvain.pasche@camptocamp.com>

        * added hilight and selection plugins
        * query plugin for SOAP mode

2004-09-16  Sylvain Pasche  <sylvain.pasche@camptocamp.com>

        * simplification of plugin interfaces
        * new query plugin
        * per plugin template mechanism
        * refactoring of selectionRequest: uses only geographical coordinates
        * better handling of wsdl file, support for reverse proxy
        * new tools can be provided by plugins implementind a ToolProvider
        * Dhtml integration (with legacy Rosa parameter interface, which needs to be changed)
        * More uniform mechanism for mainmap interaction (using shapes)

2004-09-09  Sylvain Pasche  <sylvain.pasche@camptocamp.com>

        * first commit